==> fuAlex/esp32s2_ad7175-2_driver/ad7175_driver/main/AD7175.c <==
#define AD7175_INIT
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/semphr.h"
#include "esp_system.h"
#include "esp_log.h"
#include "esp_err.h"
#include "Communication.h"
#include "AD7175.h"
#define ADC_COMM_DRIVER_ATTR IRAM_ATTR
#define ADC_COMM_DRIVER_ATTR

int32_t
ADC_COMM_DRIVER_ATTR
AD7175_ReadRegister(st_reg* pReg)
{
    int32_t ret       = 0;
    uint8_t buffer[8] = {0, 0, 0, 0, 0, 0, 0, 0};
    uint8_t i         = 0;
    uint8_t crc       = 0;

    /* Build the Command word */
    buffer[0] = COMM_REG_WEN | COMM_REG_RD | pReg->addr;
    
    /* Read data from the device */
    ret = SPI_Read(AD7175_SLAVE_ID, 
                   buffer, 
                   (AD7175_st.useCRC ? pReg->size + 1 : pReg->size) + 1);
    if(ret <= 0) {
        esp_rom_printf(DRAM_STR("READ ERROR\n"));
        return ESP_FAIL;
    }
    /* Check the CRC */
    if(AD717X_IFMODE_REG_CRC_STAT(AD7175_st.useCRC)) {
        crc = AD717X_ComputeCRC8(buffer, pReg->size + 2);
        if(crc) {
            esp_rom_printf(DRAM_STR("CRC ERROR\n"));
            return ESP_ERR_INVALID_CRC;
        }
    }
    if(AD717X_IFMODE_REG_XOR_STAT(AD7175_st.useCRC)) {
		crc = AD717X_ComputeXOR8(buffer, pReg->size + 2);
        if(crc) {
            for(int i=0; i<pReg->size + 2; i++) {
                esp_rom_printf(DRAM_STR("[%x]"), buffer[i]);
            }
            esp_rom_printf(DRAM_STR("CRC ERROR crc %x\n"), crc);
            return ESP_ERR_INVALID_CRC;
        }
	}

    /* Build the result */
    pReg->value = 0;
    for(i = 1; i < pReg->size + 1; i++) {
        pReg->value <<= 8;
        pReg->value |= buffer[i];
    }

    return ESP_OK;
}

int32_t
ADC_COMM_DRIVER_ATTR
AD7175_WriteRegister(st_reg reg)
{
    int32_t ret      = 0;
    int32_t regValue = 0;
    uint8_t wrBuf[8] = {0, 0, 0, 0, 0, 0, 0, 0};
    uint8_t i        = 0;
    uint8_t crc      = 0;
    
    /* Build the Command word */
    wrBuf[0] = COMM_REG_WEN | COMM_REG_WR | reg.addr;
    
    /* Fill the write buffer */
    regValue = reg.value;
    for(i = 0; i < reg.size; i++) {
        wrBuf[reg.size - i] = regValue & 0xFF;
        regValue >>= 8;
    }

    /* Compute the CRC */
    if(AD7175_st.useCRC) {
        crc = AD717X_ComputeCRC8(wrBuf, reg.size + 1);
		wrBuf[reg.size + 1] = crc;
        
    }

    /* Write data to the device */
    ret = SPI_Write(AD7175_SLAVE_ID,
                    wrBuf,
                    AD7175_st.useCRC ? reg.size + 2 : reg.size + 1);

    return (ret > 0) ? ESP_OK : ESP_FAIL;
}

int32_t AD717X_Reset(void)
{
	int32_t ret = 0;
	uint8_t wrBuf[8] = {0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF};

    ret = SPI_Write(AD7175_SLAVE_ID,
                    wrBuf,
                    8);

	return ret;
}

int32_t AD7175_Setup(void)
{
    esp_log_level_set(TAG, ESP_LOG_DEBUG);
    /* Initialize the SPI communication */
    SPI_Init_AD7175(0, 8000000, 1, 0);

    AD717X_Reset();
    esp_rom_delay_us(500);

    /* Read ID register */
    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[ID_st_reg]) );
    printf("device id: %04lx\r\n", (uint32_t)AD7175_regs[ID_st_reg].value);

    /* Initialize ADC mode register */
    AD7175_regs[ADC_Mode_Register].value |= (AD717X_ADCMODE_SING_CYC);
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[ADC_Mode_Register]) );

    /* Initialize Interface mode register */
    AD7175_regs[Interface_Mode_Register].value |= (AD717X_IFMODE_REG_XOR_EN | AD717X_IFMODE_REG_DOUT_RESET);
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Interface_Mode_Register]) );
    AD7175_st.useCRC = AD717X_IFMODE_REG_XOR_EN;

    /* Initialize GPIO configuration register */
    AD7175_regs[IOCon_Register].value |= AD717X_GPIOCON_REG_ERR_EN(2); // error pin ouput adc error status
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[IOCon_Register]) );
    
    /* Initialize Setup Configuration registers */
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Setup_Config_1]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Setup_Config_2]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Setup_Config_3]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Setup_Config_4]) );

    /* Initialize Filter Configuration registers */
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Filter_Config_1]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Filter_Config_2]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Filter_Config_3]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Filter_Config_4]) );

    /* Initialize Channel Map registers */
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[CH_Map_1]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[CH_Map_2]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[CH_Map_3]) );
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[CH_Map_4]) );

    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[ADC_Mode_Register]) );
    printf("ADC MODE val %04lx\n", (uint32_t)AD7175_regs[ADC_Mode_Register].value);
    
    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[Interface_Mode_Register]) );
    printf("IF mode val %04lx\n", (uint32_t)AD7175_regs[Interface_Mode_Register].value);

    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[CH_Map_1]) );
    printf("CH1 MAP val %04lx\n", (uint32_t)AD7175_regs[CH_Map_1].value);
    
    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[Setup_Config_1]) );
    printf("setup 1 val %04lx\n", (uint32_t)AD7175_regs[Setup_Config_1].value);

    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[IOCon_Register]) );
    printf("IOCON val %04lx\n", (uint32_t)AD7175_regs[IOCon_Register].value);

    // Calibration
    uint64_t offset_sum = 0;
    for (int i=0; i<16; i++) {
        AD717X_Calibration(ADC_CAL_INTER_OFFSET);
        vTaskDelay(10);
        ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[Offset_1]) );
        offset_sum += AD7175_regs[Offset_1].value;
        // printf("Offset_1 val %04lx\n", (uint32_t)AD7175_regs[Offset_1].value);
    }
    AD7175_regs[Offset_1].value = (int32_t)offset_sum / 16;
    ESP_ERROR_CHECK( AD7175_WriteRegister(AD7175_regs[Offset_1]) );
    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[Offset_1]) );
    printf("Offset_1 val %04lx\n", (uint32_t)AD7175_regs[Offset_1].value);
    ESP_ERROR_CHECK( AD7175_ReadRegister(&AD7175_regs[Gain_1]) );
    printf("Gain_1 val %04lx\n", (uint32_t)AD7175_regs[Gain_1].value);

    AD717X_Resume(ADC_WORK_MODE_CONTINUOUS);

    return ESP_OK;
}
